--- a/order_service/src/main/resources/application.yml
+++ b/order_service/src/main/resources/application.yml
@@ -7,7 +7,7 @@ spring:
     driver-class-name: com.mysql.jdbc.Driver
     url: jdbc:mysql://localhost:3306/shop?useUnicode=true&characterEncoding=utf8
     username: root
-    password: 111111
+    password: cape
   jpa:
     database: MySQL
     show-sql: true
